# mainland_future-code-searcher

./: README.md  README_CN.md  pyproject.toml  search
futures_code_search/: __init__.py  cli.py  data.py
futures_code_search/data/: futures_products.json
tests/: test_cli.py
